--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/XBakery.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.18-bin.jar=Z:\\Downloads\\library\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=xbakery.XBakery
+main.class=View.ViewMenu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
