--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,11 +32,13 @@ dist.jar=${dist.dir}/XBakery.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.18-bin.jar=Z:\\Downloads\\library\\mysql-connector-java-5.1.18-bin.jar
+file.reference.mysql-connector-java-5.1.18.bundle.jar=C:\\Users\\ASUS\\Downloads\\mysql-connector-java-5.1.18.bundle.jar~1\\mysql-connector-java-5.1.18.bundle.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.18.bundle.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
